Added more comments to basic examples and added a couple of advanced ones

--- a/basicos/ej06.html
+++ b/basicos/ej06.html
@@ -20,11 +20,15 @@
         <div class="container">
             <form action="" method="POST" role="form">
                 <legend>Formulario</legend>
-
+                
+                <!-- Agrupamos label y control con form-group -->
                 <div class="form-group">
                     <label for="">Email</label>
                     <div class="input-group">
+                        <!-- elementos input de clase form-control -->
                         <input type="text" class="form-control" placeholder="">
+                        
+                        <!-- Adorno para el input con input-group-addon -->
                         <span class="input-group-addon" id="basic-addon2">@example.com</span>
                     </div>
                 </div>
